--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  provider: ^6.1.4
   shared_preferences: ^2.3.2
   shimmer: ^3.0.0
 
